[package]
name = "my-own-planet"
version = "0.1.0"
edition = "2024"

[dependencies]

bevy = "0.19"
rand = "0.10"
rand_chacha = "0.10"
rfd = "0.17"
wasm-bindgen = "0.2"
web-sys = {
	version = "0.3",
	features = [
		"Window",
		"Document",
		"Element",
		"HtmlAnchorElement",
		"Blob",
		"Url",
	],
}

# indirectly used
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.4", features = ["wasm_js"] }
